# magnus-tokio

./: .gitignore  Cargo.toml  README.md  Rakefile  magnus_tokio.gemspec
example/: Gemfile  Rakefile
example/ext/magnus_tokio_example/: Cargo.toml  extconf.rb
example/ext/magnus_tokio_example/src/: lib.rs
example/lib/: magnus_tokio.rb
ext/magnus_tokio/: Cargo.toml  extconf.rb
ext/magnus_tokio/src/: lib.rs
lib/: magnus_tokio.rb
src/: lib.rs  rb_error.rs
