[package]
name = "magnus_tokio_example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]    

[dependencies]
magnus = {version = "0.8.2", features = ["bytes"]}
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
once_cell = "1.19"
bincode = { version = "2", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
magnus_tokio = { path = "../../../" }
